# esp32_temperature_monitor

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  add_file_header.sh  apply_clang_format.sh  block_diagram_builder.py  check_and_update_kconfig.sh  display_files_markdown.sh  esp32_fbd_config.yaml  find_consecutive_blank_lines.sh  hardware_decision_tree.py  parse_markdown_and_replace.py  precommit.sh  remove_trailing_whitespace.sh  run.sh  serial_logger.py
TrueNAS_Scale_Docker/: app.py
components/pstar_bh1750_hal/: CMakeLists.txt  pstar_bh1750_hal.c
components/pstar_bus/: CMakeLists.txt  pstar_bus_config.c  pstar_bus_i2c.c  pstar_bus_manager.c  pstar_bus_spi.c  pstar_bus_types.c
components/pstar_dht22_hal/: CMakeLists.txt  pstar_dht22_hal.c
components/pstar_error_handler/: CMakeLists.txt  pstar_error_handler.c
components/pstar_hd44780_hal/: CMakeLists.txt  pstar_hd44780_hal.c
components/pstar_ili9341_hal/: CMakeLists.txt  pstar_ili9341_hal.c
components/pstar_ili9341_hal/include/: pstar_ili9341_hal.h
components/pstar_jtag/: CMakeLists.txt  pstar_jtag.c
components/pstar_mpu6050_hal/: CMakeLists.txt  pstar_mpu6050_hal.c
components/pstar_mq135_hal/: CMakeLists.txt  pstar_mq135_hal.c
components/pstar_pca9685_hal/: CMakeLists.txt  pstar_pca9685_hal.c
components/pstar_pin_validator/: CMakeLists.txt  (+1 more)
main/: CMakeLists.txt  Kconfig.projbuild  main.c
pstar_examples/: CMakeLists.txt  bh1750_example.c  dht22_example.c  error_handler_example.c  hd44780_example.c  ili9341_example.c  jtag_example.c  mpu6050_example.c  mq135_example.c  pca9685_example.c  pin_validator_example.c  pstar_examples.c  qmc5883_example.c  sdmmc_example.c
pstar_examples/include/: bh1750_example.h  dht22_example.h  error_handler_example.h  hd44780_example.h  ili9341_example.h  jtag_example.h  mpu6050_example.h  mq135_example.h  pca9685_example.h  pin_validator_example.h  pstar_examples.h  qmc5883_example.h  sdmmc_example.h
(+30 files in other folders)
